added new head to index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 Sample Website
 </title>
 <head>
-This is a Web Page
+This is a Web Page. THIS NOW IS A CHANGE TO IT
+</head>
+<head>
+THIS NOW IS A CHANGE TO IT.
 </head>
 </html>
